fix overflow in git content

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -146,11 +146,11 @@ table.admin-properties th {
             color: #aaa;
         }
         pre {
-            overflow: visible;
+            overflow: hidden;
         }
     }
     .highlight pre {
-        overflow: auto visible;
+        overflow: auto hidden;
     }
 }
 .content_html {
